--- a/notebook/desafio01.ipynb
+++ b/notebook/desafio01.ipynb
@@ -38,15 +38,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from pyspark.sql import HiveContext"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +77,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f75cc9f49e8>"
+       "<pyspark.sql.session.SparkSession at 0x7feadd88b9e8>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,19 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+--------------+-----------+\n",
-      "|database|     tableName|isTemporary|\n",
-      "+--------+--------------+-----------+\n",
-      "|   covid| tbl_covid_ext|      false|\n",
-      "|   covid|tbl_covid_part|      false|\n",
-      "+--------+--------------+-----------+\n",
+      "+--------+----------------+-----------+\n",
+      "|database|       tableName|isTemporary|\n",
+      "+--------+----------------+-----------+\n",
+      "|   covid| tbl_brasil_acum|      false|\n",
+      "|   covid|tbl_brasil_recup|      false|\n",
+      "|   covid|   tbl_covid_ext|      false|\n",
+      "|   covid|  tbl_covid_part|      false|\n",
+      "+--------+----------------+-----------+\n",
       "\n"
      ]
     }
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -385,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -413,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -533,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -564,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -620,13 +624,13 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sqlContext.sql(\"create table tbl_brasil_recup as select * from tbl_brasil_temp_recup\")"
+    "sqlContext.sql(\"create table if not exists tbl_brasil_recup as select * from tbl_brasil_temp_recup\")"
    ]
   },
   {
@@ -638,11 +642,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_brasil.write.parquet(\"brasil.recup.parquet\")"
+    "#!pip install fabric3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[localhost] local: hadoop fs -stat hdfs://namenode:8020/user/root/brasil.recup.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fabric.api import local\n",
+    "from fabric.context_managers import settings\n",
+    "\n",
+    "file_exists = False\n",
+    "with settings(warn_only=True):\n",
+    "    result = local('hadoop fs -stat hdfs://namenode:8020/user/root/brasil.recup.parquet', capture=True)\n",
+    "    file_exists = result.succeeded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not file_exists:\n",
+    "  df_brasil_recup.write.parquet(\"brasil.recup.parquet\")"
    ]
   },
   {
@@ -654,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,11 +769,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sqlContext.sql(\"create table tbl_brasil_acum as select * from tbl_brasil_temp\")"
+    "sqlContext.sql(\"create table if not exists tbl_brasil_acum as select * from tbl_brasil_temp\")"
    ]
   },
   {
@@ -728,11 +796,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[localhost] local: hadoop fs -stat hdfs://namenode:8020/user/root/brasil.acum.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fabric.api import local\n",
+    "from fabric.context_managers import settings\n",
+    "\n",
+    "file_exists = False\n",
+    "with settings(warn_only=True):\n",
+    "    result = local('hadoop fs -stat hdfs://namenode:8020/user/root/brasil.acum.parquet', capture=True)\n",
+    "    file_exists = result.succeeded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_brasil.write.parquet(\"brasil.acum.parquet\")"
+    "if not file_exists:\n",
+    "  df_brasil.write.parquet(\"brasil.acum.parquet\")"
    ]
   },
   {
@@ -744,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -846,18 +958,6 @@
    "display_name": "PySpark",
    "language": "python",
    "name": "pyspark"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
   }
  },
  "nbformat": 4,
